--- a/libbmp/CMakeLists.txt
+++ b/libbmp/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(bmp
-        bmp.cpp
-        bmp.h)
+        Bitmap.cpp
+        Bitmap.h)
 
 target_include_directories(bmp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
