--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(rfxcpp main.cpp)
 add_subdirectory(librfx)
 add_subdirectory(libbmp)
 add_subdirectory(utils)
+add_subdirectory(tests)
 
 target_link_libraries(rfxcpp rfx)
 target_link_libraries(rfxcpp bmp)
